# VisOR-Project-Sevun

./: .gitignore  .gitmodules  7798-20-0228.PcbDoc  README.md
documentation/: cleanup.bat  cots.tex  visor_cots.tex
hardware/cots/: 7798-20-0228.DRR  7798-20-0228.EXTREP  7798-20-0228.GBL  7798-20-0228.GBO  7798-20-0228.GBS  7798-20-0228.GP1  7798-20-0228.GP2  7798-20-0228.GTL  7798-20-0228.GTO  7798-20-0228.GTS  7798-20-0228.OutJob  7798-20-0228.PcbDoc  7798-20-0228.PrjPcb  7798-20-0228.REP  7798-20-0228.SchDoc  7798-20-0228.TXT  7798-20-0228.apr  7798-20-0228_BoM.xlsx  CAMtastic1.Cam  CAMtastic2.Cam  MODS.txt  Status Report.Txt  TOP.SchDoc  _accel_mag.SchDoc  _camera.SchDoc  _dragonboard.SchDoc  _gyroscope.SchDoc  _i2c0.SchDoc  _io.SchDoc  _klt-j4k-ov2732.SchDoc  _klt-kr7-ov7251.SchDoc  _li-ov5640-mipi-af.SchDoc  _power.SchDoc  io.SchDoc  notes.txt  power.SchDoc  visor_cots.PrjPcb
hardware/cots/Project Outputs for 7798-20-0228/: 7798-20-0228-RoundHoles.TXT  7798-20-0228-SlotHoles.TXT  7798-20-0228-macro.APR_LIB  7798-20-0228.DRR  7798-20-0228.EXTREP  7798-20-0228.G1  (+27 more)
hardware/hold/: 7798-20-0228.PrjPcb
software/accel/: accel.c
software/accelmag/: README.md  main.c  makefile
software/camera/: .gitignore  CMakeLists.txt  buffers.cpp  device.cpp  hex_formatter.cpp  hex_formatter.h  main.cpp  result.h  result_message.h
software/camera/cmake/: FindSDL2.cmake  FindV4L2.cmake
software/gyroscope/: main.c  makefile
software/sensors/: README.md  accel.c  hellomake  hellomake.c  makefile
src/: CMakeLists.txt  buffers.h  device.cpp  device.h  main.cpp
(+8 files in other folders)
